Prevent text content from overflowing a page

--- a/src/style/elements/section.styl
+++ b/src/style/elements/section.styl
@@ -1,5 +1,6 @@
 @require '../variables'
 section.page
+  overflow: hidden
   width:100%
   & > header
     padding: base-line
